[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
description = "Agent Reasoning Engine — ReAct loop with Plan-and-Execute support"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
ureq = { version = "2", features = ["json"] }
